[gd_scene load_steps=21 format=3 uid="uid://dmnpm6nnnf4kg"]

[ext_resource type="Script" path="res://PART - PLAYER/SCRIPTS/player.gd" id="1_1sa3q"]
[ext_resource type="Resource" uid="uid://bivwqptijeul2" path="res://GLOBAL - DATA/SAVES/Data00.tres" id="2_oyd0d"]
[ext_resource type="Texture2D" uid="uid://didsej3ou06sn" path="res://PART - PLAYER/ASSETS/Bari_animated.png" id="2_x2l0n"]
[ext_resource type="PackedScene" uid="uid://wqlcrjmdxwdb" path="res://PART - COMPONENT/SCENES/gravity_component.tscn" id="3_l1u33"]
[ext_resource type="PackedScene" uid="uid://ks173cmm3lsc" path="res://PART - COMPONENT/SCENES/input_component.tscn" id="4_03rw7"]
[ext_resource type="PackedScene" uid="uid://bqnm2cty672tn" path="res://PART - COMPONENT/SCENES/movement_component.tscn" id="5_3jvcs"]
[ext_resource type="PackedScene" uid="uid://dl03bv2s0el6b" path="res://PART - COMPONENT/SCENES/animation_component.tscn" id="7_blyk2"]
[ext_resource type="PackedScene" uid="uid://codccv1hd133u" path="res://PART - COMPONENT/SCENES/advanced_jump_component.tscn" id="7_eboik"]

[sub_resource type="Animation" id="Animation_u7f4o"]
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [37, 38, 39, 40, 41, 42]
}

[sub_resource type="Animation" id="Animation_lmhub"]
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [24, 25, 26, 27, 28, 29, 30, 31, 32, 33]
}

[sub_resource type="Animation" id="Animation_phfcy"]
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [14, 15, 16, 17]
}

[sub_resource type="Animation" id="Animation_w670i"]
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [21, 21, 22, 21, 23, 22]
}

[sub_resource type="Animation" id="Animation_j0qas"]
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [3, 34, 35, 36]
}

[sub_resource type="Animation" id="Animation_6l3wq"]
length = 0.78
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.13, 0.26, 0.39, 0.52, 0.65),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_228jr"]
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [18, 19, 20, 18, 19, 20]
}

[sub_resource type="Animation" id="Animation_ascgy"]
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [6, 7, 8, 9, 10, 11, 12, 13]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qtt1a"]
_data = {
"DASH": SubResource("Animation_u7f4o"),
"DEATH": SubResource("Animation_lmhub"),
"DRIFT": SubResource("Animation_phfcy"),
"FALL": SubResource("Animation_w670i"),
"IDK": SubResource("Animation_j0qas"),
"IDLE": SubResource("Animation_6l3wq"),
"JUMP": SubResource("Animation_228jr"),
"RUN": SubResource("Animation_ascgy")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_k6vah"]
radius = 4.0
height = 13.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_hvfyw"]
radius = 4.0
height = 14.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_504fc"]
radius = 4.0
height = 14.0

[node name="Player" type="CharacterBody2D" node_paths=PackedStringArray("gravity_component", "input_component", "movement_component", "advanced_jump_component", "animation_component")]
slide_on_ceiling = false
script = ExtResource("1_1sa3q")
gravity_component = NodePath("GravityComponent")
input_component = NodePath("InputComponent")
movement_component = NodePath("MovementComponent")
advanced_jump_component = NodePath("AdvancedJumpComponent")
animation_component = NodePath("AnimationComponent")
data = ExtResource("2_oyd0d")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(-2, -11)
texture = ExtResource("2_x2l0n")
hframes = 7
vframes = 7
frame = 37
metadata/_aseprite_wizard_interface_config_ = {
"animation_section": false,
"layer_section": false,
"output_section": false,
"pending_changes": {},
"slice_section": false
}
metadata/_aseprite_wizard_config_ = {
"i_mode": -1,
"keep_anim_length": false,
"layers": [],
"o_ex_p": "",
"o_folder": "",
"o_name": "",
"only_visible": false,
"player": "AnimationPlayer",
"slice": "",
"source": "res://Assets/Texture/Bari_animated.aseprite"
}
metadata/_aseprite_wizard_source_file_hash_ = "05200e60f2985149506c14fb666fea73"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_qtt1a")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -6.5)
shape = SubResource("CapsuleShape2D_k6vah")

[node name="deeperChecker" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="PathChecker" type="CollisionShape2D" parent="deeperChecker"]
position = Vector2(0, -7)
shape = SubResource("CapsuleShape2D_hvfyw")

[node name="closerChecker" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 0

[node name="CollisionShape2D2" type="CollisionShape2D" parent="closerChecker"]
position = Vector2(0, -7)
shape = SubResource("CapsuleShape2D_504fc")

[node name="GravityComponent" parent="." instance=ExtResource("3_l1u33")]
gravity = 1200.0

[node name="InputComponent" parent="." instance=ExtResource("4_03rw7")]

[node name="MovementComponent" parent="." instance=ExtResource("5_3jvcs")]
speed = 150.0
ground_accel_speed = 150.0
ground_decel_speed = 150.0
air_accel_speed = 12.0
air_decel_speed = 10.0

[node name="AnimationComponent" parent="." node_paths=PackedStringArray("animator", "sprite") instance=ExtResource("7_blyk2")]
animator = NodePath("../AnimationPlayer")
sprite = NodePath("../Sprite2D")

[node name="AdvancedJumpComponent" parent="." node_paths=PackedStringArray("sprite2D") instance=ExtResource("7_eboik")]
sprite2D = NodePath("../Sprite2D")
jump_velocity = -400.0
wall_jump_max = 3

[connection signal="animation_finished" from="AnimationPlayer" to="AnimationComponent" method="_on_animation_player_animation_finished"]
[connection signal="body_entered" from="deeperChecker" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="deeperChecker" to="." method="_on_area_2d_body_exited"]
[connection signal="body_entered" from="closerChecker" to="." method="_on_closer_checker_body_entered"]
[connection signal="body_exited" from="closerChecker" to="." method="_on_closer_checker_body_exited"]
